June 20 2008: Release 1.2 RC2
============================='
OK, so it's been a while -- what can I say, I have to live in the real world as well as the opensource one :)
There are some significant changes -- almost should be a 1.3 Rc1 release, however we'll stick with 1.2

One major issue to be aware of -- the binaries for Windows are based upon the latest SVN versions
of the underlying libraries - if you want Ogre 1.4 support you will need to build it yourself from the PythonOgre SVN.
So - while the PythonOgre SVN will continue to automatically support 'stable/released' versions of libraries I personally
am not going to make builds for these (as it doesn't keep my interest).  Instead where possible everything will be based
on the latest and greatest underlying library code.

***** ISSUES *****
Some API's have changed -- Have a look at the Demo_Grass for one example (search for PythonOgreVersion). The
changes relate to where the underlying C++ function takes 'address references' as arguments and expects to modify
the variables at these locations. ie:
    bool suggestTangentVectorBuildParams(VertexElementSemantic targetSemantic,
			unsigned short& outSourceCoordSet, unsigned short& outIndex);
modifies inplace outSourceCoorSet and outIndex.  This is something we fix when wrapping the library so you get a tupple
as a return from the function:
	ret, src, dest = m.suggestTangentVectorBuildParams(ogre.VES_TANGENT,1,1)
In previous versions of PythonOgre you didn't need the 'dummy' arguments (in this example the '1,1') - however that meant
that some overloaded functions we not accesable, so now you have to obey the full C++ calling format.

There are also some properties that are no longer exposed as they were breaking the wrappers in certain areas.  These
were all 'additions' to the C++ library calls anyway so when in doubt look at the underlying library documentation..
An example is 
    SceneManager.rootSceneNode.createChildSceneNode() will not longer work, 